--- a/16sanalysis_workshop/16sworkshop/06-Project.Rmd
+++ b/16sanalysis_workshop/16sworkshop/06-Project.Rmd
@@ -2,11 +2,11 @@
 
 ## Setup
 
-Please download the raw data [here](https://www.dropbox.com/s/7sd7ipsswqcjxxj/raw_data.zip?dl=0). 
+Please download the raw data [here](https://www.dropbox.com/sh/1oy9upgzxlsra9y/AAANkbCj36lvP6vEQucE7fYna?dl=0). 
 
 These samples are from a study looking at the effect of a prebiotic on the gut microbiota of children with type 1 diabetes. To invesigate this, the researchers took samples at three timepoints (baseline, 3 months, and 6 months) and sequenced the **V3-V4** region of the 16S rRNA gene. 
 
-## Task 1
+## Task 1 (Ignore  this task)
 
 The first step with all sequence data is to ensure the primers have been removed. The two most common tools to accomplish this are **Cutadapt** and **Trimmomatic**. 
 
@@ -76,7 +76,7 @@ Use the dada2 pipeline to generate a table of ASVs and a taxonomy table.
 
 ## Task 3
 
-Use the phyloseq package to generate do some basic analysis. For this section you will need the [metadata](https://www.dropbox.com/s/htomvrgruy7am7a/project_metadata.txt?dl=0).
+Use the phyloseq package to generate do some basic analysis. For this section you will need the project metadata files that you already downloaded
 
 1. Generate a histogram of the number of reads per sample. Does this look okay?
 2. Generate a table of alpha diversity measures (Shannon, Simspon, and Chao1) and use this table to plot alpha diversity by treatment and timepoint.
@@ -119,7 +119,7 @@ library(tidyverse)
 
 Following the dada2 pipeline, we will have a sequence table and a taxonomy table. 
 
-```{r}
+```{r,echo=F}
 path <- "./book/project_files/"
 
 # Read in files
