--- a/16sanalysis_workshop/16sworkshop/index.Rmd
+++ b/16sanalysis_workshop/16sworkshop/index.Rmd
@@ -19,8 +19,8 @@ Our intention is to develop workshop material as we go along. For each day of th
 We will try to cover the following material in the course:
 
 - Day1
-  - 9:00 - 9:45 am Introductions and a presentation of the basic concepts
-  - 9:45 - 10:30 am CutAdapt- how remove primers
+  - 9:30 - 10:00 am Introductions and a presentation of the basic concepts
+  - 10:00 - 10:30 am CutAdapt- how remove primers
   - 10:30 - 10:45 am Break
   - 10:45 - 12 pm Installations of the required packages and data download
   - 12 -  1 pm Lunch break
@@ -31,8 +31,10 @@ We will try to cover the following material in the course:
   - 10:30 - 10:45 am Break
   - 10:45 - 12 Generate sequence table and remove Chimeras
   - 12 -  1 pm Lunch break
-  - 1 - 2 pm  Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object
-  - 2 - 4 pm on wards we will use a real world dataset to re-do what we have learned here
+  - 1 - 3 pm  Taxonomy explanation + assign your sequences. If time permits, make a phyloseq object
+  
+- Day 3
+  - 9:30 - 12 pm onwards we will use a real world dataset to re-do what we have learned here
 
 
 ## Important links
